project/test/semantics/unit/good/Good02_shouldEvaluateBasicExpressions.ty
singleton class SimpleMain {
    
    values: {
        numberOfMessages: Integer = 1;
    }
    
    actions: {
        main: () -> Int = {
            4
            val x: Int = 5;
            x // Should return 5
        }
    }
}
