project/test/semantics/unit/bad/Bad03_shouldThrowDivideByZeroException.ty
singleton class BinaryOperators {
    
    actions: {
        main: () -> Int = {
            val y: Int = 4 + (-6); // -2
            val x: Int = 1 + y; // 0
            24 - (2 * x + y) / (x + 1) // x + 1 == 0, exception
        }
    }
}
